.gitignore was added

--- a/Join_the_Legion_now!(src)/index.html
+++ b/Join_the_Legion_now!(src)/index.html
@@ -17,16 +17,16 @@
       <p class="form-header">Enter your legion adress</p>
       <form action="#">
         <input type="text" placeholder="Enter your name">
-        <input type="email" placeholder="Enter your Legion">
+        <input type="email" placeholder="Enter your military experience(ye)">
         <button class="btn">Receive instruction</button>
       </form>
     </div>
 
     </div></div>
     <div class="section">
-      <h2 class="feature-header">why do you need to enter the roma legion right now?</h2>
+      <h2 class="feature-header">why do you need to enter the rome legion right now?</h2>
     <div class="features">
-      <div class="col"><img src="img\icon1small.png" alt="The first feature"><p>You can use the <br>newest Roman weapon</p></div>
+      <div class="col"><img src="img\icon1small.png" alt="The first feature"><p>You can use the <br>newest Rome weapon</p></div>
       <div class="col"><img src="img\icon1small.png" alt="The second feature"><p>You will being received<br> incredible war tasks </p></div>
       <div class="col"><img src="img\icon1small.png" alt="The third feature"><p>The best wine and whorehouses<br> for our legionaires</p></div>
       <div class="col"><img src="img\icon1small.png" alt="The forth feature"><p>To die for the Rome and Emperor<br> - it is the greatest honor of life</p></div>
